<resources>
    <string name="app_name">project_gym_tracker</string>
    <string name="rutinas">Rutinas</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="agregar_rutina">Agregar Rutina</string>
    <string name="agregar_ejercicio">Agregar Ejercicio</string>
    <string name="textview">TextView</string>
    <string name="peso_kg">Peso (Kg)</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="button">Button</string>
    <string name="addroutinebtn1">+</string>
    <string name="rutinastxt1">Rutinas</string>
    <string name="restarPesobtn">-</string>
    <string name="sumarPesobtn">+</string>
    <string name="agregar_peso_y_rep">Agregar Peso y Rep.</string>
    <string name="_0">0</string>
    <string name="restarrepbtn">-</string>
    <string name="sumarrepbtn">+</string>
    <string name="_0str">0</string>
    <string name="crear_ejercicio">Crear Ejercicio</string>
    <string name="nombre">Nombre</string>
    <string name="categoria">Categoria</string>
    <string name="ejercicio">ejercicio</string>
    <string name="test_add_ex">test add ex</string>
    <string name="test_add_rout">test add rout</string>
    <string name="test_add_w_r"><![CDATA[test add w&r]]></string>
    <string name="a_adir_ejercicio">Añadir Ejercicio</string>
    <string-array name="days_array">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
    <string-array name="body_parts_array">
        <item>Piernas</item>
        <item>Pecho</item>
        <item>Bíceps</item>
        <item>Tríceps</item>
        <item>Espalda</item>
        <item>Hombros</item>
    </string-array>
</resources>
