<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tituloejercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="32dp"
        android:text="@string/agregar_ejercicio"
        android:textColor="@color/textColorSecondary"
        android:textColorHighlight="#00ACC1"
        android:textColorHint="#00ACC1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/pesokgtext"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:text="@string/peso_kg"
        android:textColor="@color/textColorSecondary"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/restarPesobtn"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/restarPesobtn" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="263dp"
        android:layout_height="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sumarPesobtn"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/sumarPesobtn" />

    <TextView
        android:id="@+id/repeticionestext"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:text="@string/repeticiones"
        android:textColor="@color/textColorSecondary"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="Button" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="144dp"
        android:layout_height="47dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="144dp"
            android:layout_height="50dp"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
