<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addexercitetibdbtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExerciteActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="222dp"
        android:layout_height="61dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="95dp"
        android:text="@string/crear_ejercicio"
        android:textColor="@color/textColorSecondary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="163dp"
        android:text="@string/nombre"
        android:textColor="@color/textColorSecondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="154dp"
        android:text="@string/categoria"
        android:textColor="@color/textColorSecondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameexerciteinput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_dynamic_neutral60"
            android:backgroundTint="@color/material_dynamic_neutral50"
            android:drawableTint="@color/buttonTextColor"
            android:hint="@string/ejercicio"
            android:textAlignment="center"
            android:textColorHighlight="@color/textColorSecondary"
            android:textColorHint="@color/textColorSecondary"
            android:textColorLink="@color/textColorSecondary"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/categoryexercitespinner"
        android:layout_width="273dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        android:backgroundTint="@color/material_dynamic_neutral50"
        android:backgroundTintMode="add"
        android:hapticFeedbackEnabled="false"
        android:popupBackground="@color/material_dynamic_neutral50"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/addexercitebdbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_adir_ejercicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryexercitespinner"
        app:layout_constraintVertical_bias="0.149" />

</androidx.constraintlayout.widget.ConstraintLayout>